--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
     <p id="project" align="justify"><strong>4.Quais são meus projetos?<br></strong>
       <ul>
-        <li>Portfolio</li>
+        <li>Portfolio (matheus-azevedo.github.io)</li>
       </ul>
     </p>
 
@@ -72,7 +72,7 @@
 
     <p id="reco" align="justify"><strong>5.O que recomendo?<br></strong>
       <ul>
-        <li><a href="https://www.youtube.com/c/Voc%C3%AAmaisrico">Bruno Perini - você mais rico</a></li>
+        <li><a href="https://www.youtube.com/c/Voc%C3%AAmaisrico" target="_blank">Bruno Perini - você mais rico</a></li>
       </ul>
     </p>
 
