Atualização do Portfolio, empregando conceitos de CAIXA

--- a/index.html
+++ b/index.html
@@ -9,45 +9,67 @@
   </head>
 
   <body>
-    <h1>Primeiramente seja Bem Vindo!</h1>
 
-    <h2>Meu nome é Matheus Eduardo de Sousa Azevedo</h2>
+    <!--HEADER-->
+    <header class="header-text">
+      <h2><strong>Quem sou eu?</strong></h2>
 
-    <p><strong>1.Quem sou eu?<br><br></strong>
-      Sou Paraibano, nascido em João Pessoa aonde atualmente moro. Tenho 31 anos, sou bacharel em Ciência da Computação com MBA Gestão Empresarial. Já fui estudante, concurseiro, guarda de uma transportadora de segurança privada e volto a ser estudante novamente com a trybe. Logo abaixo você pode conferir algumas habilidades: 
-        <ul>
-            <li>INICIATIVA para resolver problemas;</li>
-            <li>VISÃO NO CLIENTE para compreender as suas necessidades;</li>
-            <li<strong>FLEXIBILIDADE</strong> para se adaptar e evoluir independente da situação;</li>
-        </ul>
-    </p>
+      <p>
+        Sou Paraibano, nascido em João Pessoa - PB onde atualmente moro. Tenho 31 anos, sou bacharel em Ciência da Computação com MBA Gestão Empresarial. Já fui estudante, concurseiro, guarda de uma transportadora de segurança privada e volto a ser estudante com a trybe. Logo abaixo você pode conferir algumas habilidades: 
+          <ul>
+              <li>INICIATIVA para resolver problemas;</li>
+              <li>VISÃO NO CLIENTE para compreender as suas necessidades;</li>
+              <li><strong>FLEXIBILIDADE</strong> para se adaptar e evoluir independente da situação;</li>
+          </ul>
+      </p>
+    </header>
 
-    <p><strong>2.Quais são minhas experiências?<br></strong>
-        <ul>
+      <!--MAIN-->
+    <main class="main">
+
+      <!--Section 1-->
+      <section class="section-text">
+        <h3><strong>Minhas experiências</strong></h3>
+        <p>
+          <ul>
             <li>Trybe: estudante de desenvolvimento web;</li>
             <li>Brinks: chefe de guarnição e técnico de cofres;</li>
             <li>Neutron: agente de portaria;</li>
+          </ul>
+        </p>
+      </section>
+
+      <!--Section 2-->
+      <section class="section-text academica">
+        <h3><strong>Minha jornada acadêmica</strong></h3>
+        <p>
+          <ul>
+            <li>TRYBE</li>
+            <li>UNIPÊ - CENTRO UNIVERSITÁRIO DE JOÃO PESSOA</li>
+          </ul>
+        </p>
+      </section>
+
+      <!--Section 3-->
+      <section class="section-text projetos">
+        <h3><strong>Meus projetos</strong></h3>
+        <p>
+          <ul>
+            <li>Portfolio (matheus-azevedo.github.io)</li>
+          </ul>
+        </p>
+      </section>
+    </main>
+
+      <!--FOOTER-->
+    <footer class="footer">
+      <h3><strong>Recomendações</strong></h3>
+      <p>
+        <ul>
+          <li><a href="https://www.youtube.com/c/Voc%C3%AAmaisrico" target="_blank">Bruno Perini - você mais rico</a></li>
         </ul>
-    </p>
-
-    <p><strong>3.Aonde eu estudei?<br></strong>
-      <ul>
-        <li>TRYBE</li>
-        <li>UNIPÊ - CENTRO UNIVERSITÁRIO DE JOÃO PESSOA</li>
-      </ul>
-    </p>
-
-    <p><strong>4.Quais são meus projetos?<br></strong>
-      <ul>
-        <li>Portfolio (matheus-azevedo.github.io)</li>
-      </ul>
-    </p>
-
-    <p><strong>5.O que recomendo?<br></strong>
-      <ul>
-        <li><a href="https://www.youtube.com/c/Voc%C3%AAmaisrico" target="_blank">Bruno Perini - você mais rico</a></li>
-      </ul>
-    </p>
+      </p>
+    </footer>
 
   </body>
 </html>
