--- a/index.html
+++ b/index.html
@@ -11,64 +11,68 @@
   <body>
 
     <!--HEADER-->
-    <header class="header-text">
-      <h2><strong>Quem sou eu?</strong></h2>
-
-      <p>
-        Sou Paraibano, nascido em João Pessoa - PB onde atualmente moro. Tenho 31 anos, sou bacharel em Ciência da Computação com MBA Gestão Empresarial. Já fui estudante, concurseiro, guarda de uma transportadora de segurança privada e volto a ser estudante com a trybe. Logo abaixo você pode conferir algumas habilidades: 
-          <ul>
-              <li>INICIATIVA para resolver problemas;</li>
-              <li>VISÃO NO CLIENTE para compreender as suas necessidades;</li>
-              <li><strong>FLEXIBILIDADE</strong> para se adaptar e evoluir independente da situação;</li>
-          </ul>
-      </p>
+    <header class="box header-content">
+      <img class="img" src="./img/MinhaFoto.png" alt="Esta a foto de Matheus Eduardo"/>
+      <h1><strong>Primeiramente seja bem vindo!</strong></h1>
+      <h2>Me chamo Matheus Eduardo de Sousa Azevedo</h2>
+        <ul>
+          <li class="header-list-line">Desenvolvedor WEB</li>
+          <li class="header-list-line">Ex-operador de segurança privada pela Brink's</li>
+          <li class="header-list-line">Amante do Crossfit</li>
+          <li class="header-list-line">Gamer</li>
+        </ul>
     </header>
 
       <!--MAIN-->
     <main class="main">
 
       <!--Section 1-->
-      <section class="section-text">
+      <section class="box section-text">
+        <h3><strong>Quem sou eu?</strong></h3>
+          <p>
+            Sou Paraibano, nascido em João Pessoa - PB onde atualmente moro. Tenho 31 anos, sou bacharel em Ciência da Computação com MBA Gestão Empresarial. Já fui estudante, concurseiro, guarda de uma transportadora de segurança privada e volto a ser estudante com a trybe. Logo abaixo você pode conferir algumas habilidades: 
+              <ul>
+                  <li>INICIATIVA para resolver problemas;</li>
+                  <li>VISÃO NO CLIENTE para compreender as suas necessidades;</li>
+                  <li><strong>FLEXIBILIDADE</strong> para se adaptar e evoluir independente da situação;</li>
+              </ul>
+          </p>
+      </section>
+
+      <!--Section 2-->
+      <section class="box section-text">
         <h3><strong>Minhas experiências</strong></h3>
-        <p>
           <ul>
             <li>Trybe: estudante de desenvolvimento web;</li>
             <li>Brinks: chefe de guarnição e técnico de cofres;</li>
             <li>Neutron: agente de portaria;</li>
           </ul>
-        </p>
       </section>
 
-      <!--Section 2-->
-      <section class="section-text academica">
+      <!--Section 3-->
+      <section class="box section-text academica">
         <h3><strong>Minha jornada acadêmica</strong></h3>
-        <p>
           <ul>
             <li>TRYBE</li>
             <li>UNIPÊ - CENTRO UNIVERSITÁRIO DE JOÃO PESSOA</li>
           </ul>
-        </p>
       </section>
 
-      <!--Section 3-->
-      <section class="section-text projetos">
+      <!--Section 4-->
+      <section class="box section-text projetos">
         <h3><strong>Meus projetos</strong></h3>
-        <p>
           <ul>
             <li>Portfolio (matheus-azevedo.github.io)</li>
           </ul>
-        </p>
       </section>
     </main>
 
       <!--FOOTER-->
-    <footer class="footer">
+    <footer class="box footer">
       <h3><strong>Recomendações</strong></h3>
-      <p>
         <ul>
           <li><a href="https://www.youtube.com/c/Voc%C3%AAmaisrico" target="_blank">Bruno Perini - você mais rico</a></li>
         </ul>
-      </p>
     </footer>
 
   </body>
