Atualização do Portfolio, empregando conceitos de CAIXA

--- a/index.html
+++ b/index.html
@@ -68,12 +68,12 @@
     </main>
 
       <!--FOOTER-->
-    <footer class="box footer">
+    <nav class="box nav">
       <h3><strong>Recomendações</strong></h3>
       <ul>
         <li><a href="https://www.youtube.com/c/Voc%C3%AAmaisrico" target="_blank">Bruno Perini - você mais rico</a></li>
       </ul>
-    </footer>
+    </nav>
 
   </body>
 </html>
